--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -64,6 +64,12 @@
       </div>
     </div>
   </div>
+  <p>Networker Tutorial:</p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/VqBEqaqCqEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<script>
+// Hide the .PushtoTalkContainer
+document.getElementsByClassName("PushtoTalkContainer")[0].style.display = "none";
+</script>
 
 {% endblock content %}
 
