--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -6,7 +6,15 @@
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-
+<div class="row">
+  <div class="col-md-8">
+<h1>Welcome to Networker!</h1>
+<p>Networker is an AI-powered networking assistant that helps you remember important details about the people you meet and guides you towards deeper, more meaningful conversations. Say goodbye to small talk and build more authentic relationships with ease.<br><br>
+  Networker seeks to improve the way we network and communicate with others. By using OpenAI’s da-vinci algorithms (many of you will know their frontend as “ChatGPT”) combined with and Speechly’s Speech to Text and Google’s Text to Speech technology, this project aims to help people remember important details about the people they interact with, creating deeper and more fruitful relationships.
+  </p>
+<p>Networker Tutorial:</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VqBEqaqCqEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div></div>
   <div class="row">
     <div class="col-md-8">
       <div class="card">
@@ -64,8 +72,6 @@
       </div>
     </div>
   </div>
-  <p>Networker Tutorial:</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/VqBEqaqCqEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <script>
 // Hide the .PushtoTalkContainer
 document.getElementsByClassName("PushtoTalkContainer")[0].style.display = "none";
