--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -13,7 +13,7 @@
   Networker seeks to improve the way we network and communicate with others. By using OpenAI’s da-vinci algorithms (many of you will know their frontend as “ChatGPT”) combined with and Speechly’s Speech to Text and Google’s Text to Speech technology, this project aims to help people remember important details about the people they interact with, creating deeper and more fruitful relationships.
   </p>
 <p>Networker Tutorial:</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/VqBEqaqCqEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" style="padding:25px" src="https://www.youtube.com/embed/VqBEqaqCqEY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div></div>
   <div class="row">
     <div class="col-md-8">
